Add implementation of GetLastExchangeRate and GetAllCurrencies endpoints
